--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
   
   z-index: 99;
   width: 100%;
-  height: 80px;
+  height: auto;
   margin: 0;
   overflow: auto;
   color: #fff;
@@ -33,7 +33,7 @@ body {
   background: #4aaaa5;
   color: white;
   width: 270px;
-  height: 0%;
+  height: 96px;
   margin-top: 0px;
   margin-left: 15%;
   padding: 25px 40px 35px 35px;
@@ -79,7 +79,7 @@ ul {
 
 li {
 	
-	display: inline-block;
+	display: inline;
 	padding: 10px;
 	font-weight: bold;
 }
@@ -262,23 +262,21 @@ textarea  {
 
 /* ---------------------------------- page - PORTFOLIO  ------------------------------------ */
 
-
-
-.portfolio-setting1 {
-	float: left;
+/* .portfolio-setting1 {
+  float: left;
 
 }
-.image-h4 {
-	position: relative; 
+ *//* .image-h4 {
+  position: relative; 
    width: 100%
 
-}
+} */
 
 #portfolio-setting img {
 	float: left;
 	margin: 20px;
 	border: 2px solid #eee;
-	width: 245px;
+	width: 200px;
 	height: 200px;
 	
 }
@@ -287,21 +285,26 @@ textarea  {
   position: relative;
   float: left;
   width: 274px;
-  margin: 20px 0 25px;
+/*margin: 20px 0 35px;*/
+  margin: 0px;
   overflow: auto;
+  display: inline;
 }
+
 .portfolio:nth-child(even) {
   margin-right: 40px;
 }
 .portfolio img {
+  
   width: 100%;
   border: 0 none;
   opacity: 0.8;
 }
+
 .portfolio h4 {
   position: absolute;
   bottom: 20px;
-  width: 91%;
+  width: 90%;
   padding: 15px;
   margin-left: 20px;
   margin-bottom: 15px;
@@ -360,8 +363,8 @@ textarea  {
     float: left;
     margin: 20px;
     border: 2px solid #eee;
-    width: 340px;
-    height: 200px;
+    width: 40%;
+    height: auto;
 	}
 	
 	
@@ -393,7 +396,7 @@ textarea  {
   }
 
   #portfolio-setting img  {
-    width: 50%;
+    width: 40%;
   }
 
   .sidebar {
@@ -403,12 +406,15 @@ textarea  {
   }
 
   .portfolio {
-    width: 50%;
+    width: 100%;
   }
   .image-h4 {
     position: relative;
-    width: 50%;
+    width: 40%;
 }
+.portfolio h4 {
+    width: 40%;
+  }
 	
 }
 /*-------------------------------max-width: 640px---------------------------------------------------------*/
@@ -423,17 +429,17 @@ textarea  {
   }
 
   #list-top {
-    width: 101%;
+    width: 100%;
     height: 2%;
     margin: -2% -1.5% 0%;
     margin: -2% -1.5% 0%;
     position: absolute;
     top: 92px;
-    left: 10px; 
+    left: 5px; 
     background-color: white;
   }
   ul li a{
-    padding: 0px 55px 0px 54px;
+    padding: 0px 30px 0px 30px;
   }
   ul{
     margin: -15px;
@@ -464,7 +470,7 @@ textarea  {
   }
 
     .sidebar {
-    width: 95%;
+    width: 100%;
     margin-bottom: 5%;
     margin-top: 20px;
     margin-left: 20px;
